# stm-containers

./: .gitignore  .travis.yml  CHANGELOG.md  cabal.project  mutable-containers.cabal  stm-containers.cabal
.github/workflows/: cd.yaml  check.yaml  ci.yaml  on-push-to-release.yaml
executables/: APITests.hs  ConcurrentInsertionBench.hs  ConcurrentTransactionsBench.hs  CoordinatesTests.hs  InsertionBench.hs  Profiling.hs  WordArrayTests.hs
executables/APITests/: MapTests.hs
executables/APITests/MapTests/: Update.hs
executables/MutableContainers/: Prelude.hs  WordArrayTests.hs
executables/STMContainers/: Prelude.hs  Transformers.hs
executables/WordArrayTests/: Update.hs
test/: Main.hs
test/Main/: BimapTests.hs  MapTests.hs
test/Main/MapTests/: Update.hs
test/Suites/: Bimap.hs  Map.hs  Set.hs
test/Suites/Map/: Update.hs
