name:
  mutable-containers
version:
  0.1.0
synopsis:
  Mutable boxed containers
description:
category:
homepage:
  https://github.com/nikita-volkov/mutable-containers 
bug-reports:
  https://github.com/nikita-volkov/mutable-containers/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/mutable-containers.git


library
  hs-source-dirs:
    library
  other-modules:
    MutableContainers.Prelude
    MutableContainers.WordArray.Bitmap
  exposed-modules:
    MutableContainers.WordArray
  build-depends:
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    primitive == 0.5.*,
    base >= 4.5 && < 5
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
