name:
  mutable-containers
version:
  0.1.0
synopsis:
  Mutable boxed containers
description:
category:
homepage:
  https://github.com/nikita-volkov/mutable-containers 
bug-reports:
  https://github.com/nikita-volkov/mutable-containers/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/mutable-containers.git


library
  hs-source-dirs:
    library
  other-modules:
    MutableContainers.Prelude
    MutableContainers.Transformers
    MutableContainers.Coordinates
    MutableContainers.RefMonad
    MutableContainers.WordArray.Bitmap
    MutableContainers.HashTable.Node
    MutableContainers.HashTable.Node.Leaf
    MutableContainers.WordArray.Immutable
    MutableContainers.WordArray.Primitive
  exposed-modules:
    MutableContainers.Array
    MutableContainers.WordArray
    MutableContainers.HashTable
  build-depends:
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    hashable <= 1.3,
    foldl == 1.0.*,
    primitive == 0.5.*,
    mtl == 2.*,
    base >= 4.5 && < 5
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010


test-suite api-tests
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    executables
  main-is:
    APITests.hs
  build-depends:
    mutable-containers,
    QuickCheck == 2.7.*,
    HTF == 0.11.*,
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    free >= 4.6 && < 5,
    mtl == 2.1.*,
    base >= 4.5 && < 5
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010


test-suite coordinates-tests
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    executables
    library
  main-is:
    CoordinatesTests.hs
  ghc-options:
    -threaded
  build-depends:
    numeric-qq == 0.1.*,
    HTF == 0.11.*,
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    mtl == 2.*,
    base >= 4.5 && < 5
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
