name:
  stm-containers
version:
  1
synopsis:
  Containers for STM
description:
  This library is based on an STM-specialized implementation of
  Hash Array Mapped Trie.
  It provides efficient implementations of @Map@, @Set@
  and other data structures,
  which are marginally slower than their counterparts from \"unordered-containers\",
  but scale well on concurrent access patterns.
  .
  For details on performance of the library see
  <http://nikita-volkov.github.io/stm-containers/ this blog post>.
category:
  Data Structures, STM, Concurrency
homepage:
  https://github.com/nikita-volkov/stm-containers
bug-reports:
  https://github.com/nikita-volkov/stm-containers/issues
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/stm-containers.git


library
  hs-source-dirs:
    library
  other-modules:
    STM.Containers.Private.Prelude
    STM.Containers.Private.Focuses
  exposed-modules:
    STM.Containers.Map
    STM.Containers.Set
    STM.Containers.Bimap
    STM.Containers.Multimap
  build-depends:
    -- data:
    stm-hamt == 1.*,
    focus >= 0.8.1 && < 0.9,
    hashable < 2,
    -- control:
    list-t >= 1 && < 2,
    transformers >= 0.3 && < 0.6,
    -- general:
    base-prelude < 2,
    base < 4.10
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010


test-suite api-tests
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    executables
  main-is:
    APITests.hs
  other-modules:
    APITests.MapTests
    APITests.MapTests.Update
  build-depends:
    QuickCheck >= 2.7 && < 3,
    HTF == 0.13.*,
    stm-containers,
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    list-t,
    focus,
    unordered-containers == 0.2.*,
    free >= 4.6 && < 5,
    mtl == 2.*,
    hashable,
    mtl-prelude < 3,
    base-prelude,
    base
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
