name: stm-containers
version: 1.0.1.1
synopsis: Containers for STM
description:
  This library is based on an STM-specialized implementation of
  Hash Array Mapped Trie.
  It provides efficient implementations of @Map@, @Set@
  and other data structures,
  which starting from version @1@ perform even better than their counterparts from \"unordered-containers\",
  but also scale well on concurrent access patterns.
  .
  For details on performance of the library, which are a bit outdated, see
  <http://nikita-volkov.github.io/stm-containers/ this blog post>.
category: Data Structures, STM, Concurrency
homepage: https://github.com/nikita-volkov/stm-containers
bug-reports: https://github.com/nikita-volkov/stm-containers/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2014, Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10
tested-with: GHC ==8.0.2, GHC ==8.2.2, GHC ==8.4.2, GHC ==8.6.*

source-repository head
  type: git
  location: git://github.com/nikita-volkov/stm-containers.git

library
  hs-source-dirs: library
  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    StmContainers.Map
    StmContainers.Set
    StmContainers.Bimap
    StmContainers.Multimap
  other-modules:
    StmContainers.Prelude
  build-depends:
    base >=4.9 && <5,
    deferred-folds >=0.6.6 && <0.7,
    focus >=1 && <1.1,
    hashable <2,
    list-t >=1.0.1 && <1.1,
    stm-hamt >=1.1.2.1 && <1.2,
    transformers >=0.5 && <0.6

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
    Main.MapTests
    Main.MapTests.Update
  build-depends:
    deferred-folds,
    focus,
    foldl >=1.4 && <2,
    free >=4.6 && <6,
    HTF ==0.13.*,
    QuickCheck >=2.7 && <3,
    quickcheck-text >=0.1.2.1 && <0.2,
    rerebase >=1 && <2,
    stm-containers
