cabal-version: 3.0
name: stm-containers
version: 1.2.1
synopsis: Containers for STM
description:
  This library is based on an STM-specialized implementation of
  Hash Array Mapped Trie.
  It provides efficient implementations of @Map@, @Set@
  and other data structures,
  which starting from version @1@ perform even better than their counterparts from \"unordered-containers\",
  but also scale well on concurrent access patterns.
  .
  For details on performance of the library, which are a bit outdated, see
  <http://nikita-volkov.github.io/stm-containers/ this blog post>.

category: Data Structures, STM, Concurrency
homepage: https://github.com/nikita-volkov/stm-containers
bug-reports: https://github.com/nikita-volkov/stm-containers/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2014, Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: git://github.com/nikita-volkov/stm-containers.git

library
  hs-source-dirs: library
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples

  default-language: Haskell2010
  exposed-modules:
    StmContainers.Bimap
    StmContainers.Map
    StmContainers.Multimap
    StmContainers.Set

  other-modules: StmContainers.Prelude
  build-depends:
    base >=4.9 && <5,
    deferred-folds >=0.9 && <0.10,
    focus >=1.0.1.4 && <1.1,
    hashable >=1.4 && <2,
    list-t >=1.0.1 && <1.1,
    stm-hamt >=1.2.1 && <1.3,
    transformers >=0.5 && <0.7,

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples

  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
    Suites.Bimap
    Suites.Map
    Suites.Map.Update

  build-depends:
    deferred-folds,
    focus,
    foldl >=1.4 && <2,
    free >=4.6 && <6,
    list-t,
    quickcheck-instances >=0.3.29.1 && <0.4,
    rerebase >=1 && <2,
    stm-containers,
    tasty >=0.12 && <2,
    tasty-hunit >=0.10.0.3 && <0.11,
    tasty-quickcheck >=0.10.2 && <0.11,
